2015-10-12  Per Bothner  <per@bothner.com>

	* Path/java (valueOf): A string starting with a '/' is a FilePath.

2015-10-10  Per Bothner  <per@bothner.com>

	Changes in Path/URI handling, with corrected RFC-3986 'resolve'.
	* URIPath.java (resolve): Rewrite, implementing the RFC-3986
	resolution algorithm, rather than using java.net.URI.resolve, which
	follows the obsolete RFC-2396.  Biggest difference is that resolve("")
	is now basically a no-op. Use resolve(".") to get directory.
	(resolveToUri): Helper method.
	(toFile): New method.
	* URLPath.java (resolve): Use resolveToUri.
	* Path.java (toFile, isPlainFile): New methods.
	(valueOf): Create URIPath rather than FilePath if relative.
	(getLast): Fix thinko.
	* FilePath.java (resolve): No-op if argument is "".
	(toURL): Update accordingly.

2015-07-31  Per Bothner  <per@bothner.com>

	* CharArrayInPort.java: Add support for reading from
	indirect-indexable AbstractCharVector.
	* InPort.java (read): Kludge for CharArrayInPort.

2015-05-05  Per Bothner  <per@bothner.com>

	* PrettyWriter.java (enqueue): If we're sharing, we don't wrap around,
	so may need to re-allocate even there is unused space at the start.
	(enoughSpace): Use 1.5 rather than 2.0 as grow factor.
	(enqueue): Simplify re-allocation to just use enoughSpace value.
	(itemKindString): Update debug helper.

	* TtyInPort.java (lineStart): Try again ...

2015-05-03  Per Bothner  <per@bothner.com>

	* TtyInPort.java: Minor tweak to previous change: Don't call
	freshLine if resuluting promot string is null or empty.

2015-05-02  Per Bothner  <per@bothner.com>

	* TtyInPort.java (lineStart): Only call freshLine if we have
	a prompter.

2015-01-11  Per Bothner  <per@bothner.com>

	* CheckConsole.java: New helper class to support --console flag.
	(setHaveConsole, haveConsole): New methods.
	(haveConsole): New 3-valued field replaces boolean InPort.noConsole.
	* InPort.java (systemInPort): Use CheckConsole.haveConsole.
	(haveConsole): Moved to CheckConsole.